--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 <div class="text-center py-16 bg-gray-800 rounded-lg">
     <h2 class="text-2xl font-semibold text-white">Welcome!</h2>
     <p class="text-gray-400 text-lg mt-2">No manga has been uploaded yet.</p>
-    <p class="text-gray-500 mt-4">Open Telegram and send /upload to your bot to add your first series.</p>
+    <p class="text-gray-500 mt-4">Open Telegram and send /start to your bot to add your first series.</p>
 </div>
 {% endif %}
 {% endblock %}
